--- a/test.ipynb
+++ b/test.ipynb
@@ -4,19 +4,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dat.lt19010205/.conda/envs/thanh/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
-    "from students import *"
+    "from students import *\n",
+    "import torch.nn as nn"
    ]
   },
   {
@@ -57,6 +49,15 @@
    "source": [
     "output.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.randn(1, 256, 3, 3)"
+   ]
   }
  ],
  "metadata": {
@@ -75,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
