Update UNet.py and test.ipynb

--- a/test.ipynb
+++ b/test.ipynb
@@ -52,11 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 256, 7, 7])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = torch.randn(1, 256, 3, 3)"
+    "a = torch.randn(1, 256, 3, 3)\n",
+    "\n",
+    "up = nn.Upsample(scale_factor=2.5, mode='bilinear', align_corners=True)\n",
+    "\n",
+    "b = up(a)\n",
+    "\n",
+    "b.shape"
    ]
   }
  ],
